# infrastructure

./: .gitignore  README.md
.github/workflows/: cicd.yaml
Websocket-Infra-Project-March-2026/: README.md
Websocket-Infra-Project-March-2026/Python/: base.py  main.py  pyproject.toml
Websocket-Infra-Project-March-2026/ansible/: inventory.ini
Websocket-Infra-Project-March-2026/ansible/group_vars/: all.yaml
Websocket-Infra-Project-March-2026/ansible/playbooks/: bastion.yaml  kubernetes.yaml  monitoring.yaml  postgres.yaml  rabbitmq.yaml  site.yaml
Websocket-Infra-Project-March-2026/apps/python-service/: Dockerfile  exchange_factory.py
Websocket-Infra-Project-March-2026/apps/python-service/exchanges/: binance_ws.py
Websocket-Infra-Project-March-2026/terraform/: AmazonEKS_CNI_Policy.json  guide.txt
Websocket-Infra-Project-March-2026/terraform/bootstrap/: main.tf  tfplan  tfplan-prod
Websocket-Infra-Project-March-2026/terraform/environments/development/: .terraform.lock.hcl  backend.tf  main.tf  output.tf  provider.tf  variables.tf
Websocket-Infra-Project-March-2026/terraform/modules/autoscaling/: main.tf  variables.tf
Websocket-Infra-Project-March-2026/terraform/modules/ec2/: main.tf  output.tf  variables.tf
Websocket-Infra-Project-March-2026/terraform/modules/ecr/: main.tf
Websocket-Infra-Project-March-2026/terraform/modules/eks/: main.tf  output.tf  variables.tf
Websocket-Infra-Project-March-2026/terraform/modules/iam/: main.tf
Websocket-Infra-Project-March-2026/terraform/modules/security-group/: main.tf  output.tf  variables.tf
(+11 files in other folders)
